libavdemux: error: ‘AVInputFormat’ has no member named ‘read_probe’ with ffmpeg 7.0
Unable to compile gst-libav with upstream ffmpeg since ffmpeg commit https://git.ffmpeg.org/gitweb/ffmpeg.git/commit/b800327f4c72
../subprojects/gst-libav/ext/libav/gstavdemux.c: In function ‘gst_ffmpegdemux_type_find’:
../subprojects/gst-libav/ext/libav/gstavdemux.c:1403:16: error: ‘AVInputFormat’ has no member named ‘read_probe’
1403 | if (in_plugin->read_probe &&
| ^~
../subprojects/gst-libav/ext/libav/gstavdemux.c:1411:20: error: ‘AVInputFormat’ has no member named ‘read_probe’
1411 | res = in_plugin->read_probe (&probe_data);
| ^~